--- a/BusanBusStation/app/src/main/res/layout/activity_main.xml
+++ b/BusanBusStation/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
             android:text="요청하기" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
